--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,28 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>
+        <item name="android:buttonStyle">@style/PipboyButtonStyle</item>
+        <item name="android:editTextStyle">@style/RobotoEditTextStyle</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">courier</item>
+    </style>
+
+    <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">courier</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="RobotoEditTextStyle" parent="android:Widget.EditText">
+        <item name="android:fontFamily">courier</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="PipboyButtonStyle" parent="android:Widget.Button">
+        <item name="android:fontFamily">courier</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
 </resources>
