--- a/app/src/main/res/layout/activity_satellite.xml
+++ b/app/src/main/res/layout/activity_satellite.xml
@@ -5,14 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.publicntp.gnssreader.activity.MainActivity">
+    tools:context="org.publicntp.gnssreader.activity.SatelliteActivity">
 
-    <TextView
-        android:id="@+id/screenOutputId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
