--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,148 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/info_scrollview"
+    android:id="@+id/layout_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <!-- about title/text -->
+    <TextView
+        android:id="@+id/info_about_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/roboto_medium"
+        android:text="@string/info_text_title"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textColor="@color/primary_dark"
+        android:textSize="48sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- about title/text -->
-        <android.support.v7.widget.CardView
-            android:id="@+id/info_about_card"
-            android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/info_about_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/roboto"
+        android:text="@string/info_text_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/primary_dark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/info_about_title" />
+
+    <Button
+        android:id="@+id/info_btn_website"
+        style="@style/AppTheme.Button.Large"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/roboto_medium"
+        android:text="@string/info_btn_website_label"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/info_about_content"
+        tools:text="website" />
+
+    <Button
+        android:id="@+id/info_btn_contact"
+        style="@style/AppTheme.Button.Large"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/roboto_medium"
+        android:text="@string/info_btn_contact_label"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/info_btn_website"
+        tools:text="contact" />
+
+
+    <!-- version/app info -->
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/info_btn_contact"
+        app:layout_constraintVertical_bias="1.0">
+
+        <TextView
+            android:id="@+id/info_text_version"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/card_spacing"
-            android:paddingBottom="@dimen/card_padding"
-            android:clickable="false">
+            android:fontFamily="@font/roboto_medium"
+            android:paddingBottom="4dp"
+            android:text="@string/info_text_version"
+            android:textColor="@color/primary"
+            android:textSize="12sp"
+            android:typeface="normal" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/info_about_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="@string/info_text_title"
-                    android:textColor="@color/primary_dark"
-                    android:textSize="54sp" />
-
-                <TextView
-                    android:id="@+id/info_about_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/roboto"
-                    android:text="@string/info_text_content"
-                    android:textColor="@color/primary_dark"
-                    android:textSize="16sp" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="32dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:orientation="vertical">
-
-                    <Button
-                        android:id="@+id/info_btn_website"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
-                        android:background="@color/primary_dark"
-                        android:fontFamily="@font/roboto_medium"
-                        android:text="@string/info_btn_website_label"
-                        android:textColor="@android:color/white"
-                        android:textSize="20sp" />
-
-                    <Button
-                        android:id="@+id/info_btn_contact"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
-                        android:background="@color/primary_dark"
-                        android:fontFamily="@font/roboto_medium"
-                        android:text="@string/info_btn_contact_label"
-                        android:textColor="@android:color/white"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <!-- version/app info -->
-        <android.support.v7.widget.CardView
-            android:id="@+id/info_version_card"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/info_text_organization"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/card_spacing"
-            android:paddingBottom="@dimen/card_spacing"
-            android:clickable="false">
+            android:fontFamily="@font/roboto_medium"
+            android:paddingBottom="4dp"
+            android:text="@string/info_text_organization"
+            android:textColor="@color/primary"
+            android:textSize="12sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/info_text_version"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="4dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="@string/info_text_version"
-                    android:textColor="@color/primary"
-                    android:textSize="12sp"
-                    android:typeface="normal" />
-
-                <TextView
-                    android:id="@+id/info_text_organization"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="4dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="@string/info_text_organization"
-                    android:textColor="@color/primary"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/info_text_developer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="@string/info_text_developer"
-                    android:textColor="@color/primary"
-                    android:textSize="12sp" />
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/info_text_developer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_medium"
+            android:text="@string/info_text_developer"
+            android:textColor="@color/primary"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
-</ScrollView>
+</android.support.constraint.ConstraintLayout>
