--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,18 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorAccent">@color/accent</item>
+
+        <item name="android:colorButtonNormal">@color/primary_dark</item>
+
     </style>
 
-    <style name="AppTheme.Button.Colored.Large" parent="Widget.AppCompat.Button">
-        <!--
-            `android:background` overrides the material design drawable which
-            causes the button to have square corners in API version < v21.
-        -->
-        <item name="android:background">@color/primary_dark</item>
+    <style name="AppTheme.Button.Large" parent="Widget.AppCompat.Button">
         <item name="android:textColor">@color/white</item>
         <item name="android:minHeight">64dip</item>
         <item name="android:minWidth">64dip</item>
