--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="primary_dark">#333333</color>
     <!--<color name="muted"></color>-->
 
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+
 </resources>
