--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="card_spacing">16dp</dimen>
-    <dimen name="card_padding">16dp</dimen>
+    <dimen name="info_text_title">54sp</dimen>
+    <dimen name="info_text_content">16sp</dimen>
 </resources>
